--- a/package.json
+++ b/package.json
@@ -11,18 +11,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "4.12.4",
+    "@reduxjs/toolkit": "1.9.1",
     "next": "13.0.5",
+    "next-redux-wrapper": "8.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "8.0.5",
+    "redux-devtools-extension": "2.13.9",
+    "redux-persist": "6.0.0",
+    "redux-thunk": "2.4.2",
+    "styled-components": "5.3.6"
   },
   "devDependencies": {
-    "@types/node": "18.11.10",
+    "@next/eslint-plugin-next": "13.0.5",
+    "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "@types/styled-components": "5.1.26",
+    "@typescript-eslint/eslint-plugin": "5.44.0",
+    "@typescript-eslint/parser": "5.44.0",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-simple-import-sort": "8.0.0"
+    "eslint-plugin-simple-import-sort": "8.0.0",
+    "typescript": "4.9.3"
   }
 }
