--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@material-ui/core": "4.12.4",
+    "@mui/material": "5.10.17",
+    "@mui/styled-engine-sc": "5.10.16",
+    "@mui/styles": "5.10.16",
     "@reduxjs/toolkit": "1.9.1",
+    "formik": "2.2.9",
     "next": "13.0.5",
     "next-redux-wrapper": "8.0.0",
     "react": "18.2.0",
