--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "11.10.5",
+    "@emotion/styled": "11.10.5",
     "@mui/material": "5.10.17",
     "@mui/styled-engine-sc": "5.10.16",
     "@mui/styles": "5.10.16",
@@ -24,7 +26,8 @@
     "redux-devtools-extension": "2.13.9",
     "redux-persist": "6.0.0",
     "redux-thunk": "2.4.2",
-    "styled-components": "5.3.6"
+    "styled-components": "5.3.6",
+    "yup": "0.32.11"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "13.0.5",
