--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/styled-components": "5.1.26",
     "@typescript-eslint/eslint-plugin": "5.44.0",
     "@typescript-eslint/parser": "5.44.0",
+    "babel-plugin-styled-components": "2.0.7",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "eslint-plugin-react": "7.31.11",
