--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
+    "@mui/icons-material": "5.10.16",
     "@mui/material": "5.10.17",
     "@mui/styled-engine-sc": "5.10.16",
     "@mui/styles": "5.10.16",
